# OpenPharmMDFlow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.TXT  README  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  user-story.md
.github/workflows/: ci.yaml  docker.yaml
conda-envs/: docs.yaml  macos-latest-bespoke-fit-false.yaml  macos-latest-bespokefit-false.yaml  macos-latest-bespokefit-true.yaml  macos-latest.yaml  production.yaml  ubuntu-22.04-bespokefit-false.yaml  ubuntu-22.04-bespokefit-true.yaml  ubuntu-22.04.yaml  ubuntu-latest-bespokefit-false.yaml  ubuntu-latest-bespokefit-true.yaml  ubuntu-latest.yaml
containers/: cod-tools.def
docs/: api.rst  bespokefit.nblink  conf.py  index.rst  install.rst  mini_mvp.nblink  small_molecule_pipeline_example.nblink
examples/large_molecules/CGMD/: Dockerfile  README.md  create_simulation.sh  first_pass.py  generate_gro_file.py  martini_v3.0.0_solvents_v1.itp  minimization.mdp  run_CG_simulation.py  run_martinize.sh  slurm_submit.sh
examples/mini_mvp/: env.yaml  mini_mvp.ipynb
examples/pipeline/: Large_Molecule_Pipeline-WIP.ipynb  Large_Molecule_Pipeline.ipynb  NAGL Charges.ipynb  SM.ipynb  Small_Molecule_Pipeline.ipynb  Small_Molecule_Pipeline_GAFF.ipynb  ibuprofen.sdf  water-ibuprofen.ipynb
examples/polymer/: CAP_XBT_5_unit_capped_chain.sdf  HPMCAS-H-Trimer.sdf
examples/small_molecules/bespoke-fit/: bespokefit.ipynb
experiments/new-pdb-loader/: environment.yaml  input_file.inp  new-pdb-reader.ipynb  opennmm-mab-1.py  opennmm-mab.py  utils.py
inputs/mAb/: README.md
inputs/small_molecule/: AWUDEB.cif  HXACAN.cif  README.md
openpharmmdflow/: __about__.py  __init__.py
openpharmmdflow/apptainer/: apptainer.py
openpharmmdflow/bespokefit/: __init__.py  bespokefit.py
openpharmmdflow/io/: __init__.py  cif.py  load.py
openpharmmdflow/tests/: import_test.py
small_molec_FF_opt/: MM_data.csv  MM_opt_cif.py  ordered.cif  symmetrize.py
small_molec_FF_opt/cif/: ACETAC01.cif  RESORA_A.cif  RESORA_B.cif  SEDNOG.cif  UNISUG.cif
small_molec_FF_opt/minimized/: ACETAC01.cif  HXACAN.cif  RESORA_A.cif  RESORA_B.cif  SEDNOG.cif  UNISUG.cif
small_molec_FF_opt/symmed/: ACETAC01.cif  HXACAN.cif  RESORA_A.cif  RESORA_B.cif  SEDNOG.cif  UNISUG.cif
test_reader/: cif2cartesian.ipynb  molecular.cif  molecular.xyz  unitcell.cif  unitcell.xyz
(+25 files in other folders)
