[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpharmmdflow"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Mike Henry", email = "11765982+mikemhenry@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/omsf/openpharmmdflow#readme"
Issues = "https://github.com/omsf/openpharmmdflow/issues"
Source = "https://github.com/omsf/openpharmmdflow"
